Fix for layout bugs

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -378,7 +378,9 @@ main#app-main {
 				position: 		relative;
 				
 				width: 			100vw;
-				height: 			auto;						
+				height: 			auto;
+				
+				padding-bottom: 	($container-padding * 2);						
 			}
 			
 			@include md-up {
@@ -387,6 +389,7 @@ main#app-main {
 				position: 		fixed;
 				
 				height: 			100vh;
+ 				padding-bottom: 	($container-padding * 2);
 				
 				overflow-y: 		scroll;
 				overflow-x: 		hidden;
